# Schedule-Of-Investments-Parser

./: Parser.py  ParserAllPages.py  ParserFull-Textraction.py  ParserFull.py  README.md  checkHeaders.py  outputJson.json  pyproject.toml
Examples/: document.ini  document.json  fqr-retail-blackrock-international-fund.ini  fqr-retail-blackrock-international-fund.json  fundamental-intl-equity-sar.ini  fundamental-intl-equity-sar.json
