[project]
name = "Schedule-Of-Investments-Parser"
version = "0.1.0"
description = "A python script to analyze mutual fund PDF releases and convert core points into JSON."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "configobj>=5.0.9",
    "openai>=1.60.2",
    "pdfplumber>=0.11.5",
    "python-dotenv>=1.0.1",
]
